...
                ),
                Column(
                  spacing: AppSpacing.md,
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    AppTextField(
                      fieldKey: const Key('usernameField'),
                      placeholder: 'Enter Username',
                      title: 'Username',
                      validator: InputValidators.username,
                      keyboardType: TextInputType.text,
                      onChanged: _onUsernameChanged,
                    ),
...
                ),
                Consumer(
                  builder: (context, ref, child) {
                    final state = ref.watch(signInControllerProvider);

                    return AppButton(
                      buttonKey: const Key('buttonKey'),
                      text: 'Sign In',
                      onPressed: () {
                        FocusManager.instance.primaryFocus?.unfocus();

                        ref
                            .read(signInControllerProvider.notifier)
...
